Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -30,7 +30,7 @@
 
     header {
       background: linear-gradient(90deg, var(--dorado-oscuro), var(--miel-tostado));
-      color: white;
+      color: rgb(0, 0, 0);
       padding: 25px 10px;
       text-align: center;
       font-size: 1.9em;
@@ -86,7 +86,7 @@
 
     h1 {
       font-size: 2.6em;
-      color: #fff;
+      color: #ffffffcc;
       margin-top: 25px;
       text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
     }
@@ -112,7 +112,7 @@
       padding: 60px 20px;
       max-width: 1000px;
       margin: 60px auto;
-      background-color: #fffaf0; /* Fondo de secciones: cámbialo si lo quieres más oscuro o beige */
+      background-color: #f3c23b; /* Fondo de secciones: cámbialo si lo quieres más oscuro o beige */
       border-radius: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.15);
       color: var(--texto-oscuro);
