Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     header {
       background: linear-gradient(90deg, var(--dorado-oscuro), var(--miel-tostado));
-      color: rgb(0, 0, 0);
+      color: rgb(255, 255, 255);
       padding: 25px 10px;
       text-align: center;
       font-size: 1.9em;
@@ -112,7 +112,7 @@
       padding: 60px 20px;
       max-width: 1000px;
       margin: 60px auto;
-      background-color: #f3c23b; /* Fondo de secciones: cámbialo si lo quieres más oscuro o beige */
+      background-color: #d29b38; /* Fondo de secciones: cámbialo si lo quieres más oscuro o beige */
       border-radius: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.15);
       color: var(--texto-oscuro);
