Implement side menu and new sections in index.html
Added a side menu and overlay for navigation, including new sections for products and healthy options.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -9,13 +9,12 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
-    /* 🎨 PALETA DE COLORES: cambia estos valores si deseas ajustar tonos */
     :root {
-      --dorado-oscuro: #d29b38; /* Color dorado principal */
-      --miel-tostado: #b8741a;  /* Color miel secundario */
-      --beige-profundo: #f1d8a6; /* Fondo de menús */
-      --beige-suave: #f6e3b0;   /* Fondo de tarjetas */
-      --texto-oscuro: #3a2610;  /* Color de letras principales */
+      --dorado-oscuro: #d29b38;
+      --miel-tostado: #b8741a;
+      --beige-profundo: #f1d8a6;
+      --beige-suave: #f6e3b0;
+      --texto-oscuro: #3a2610;
       --fondo-textura: radial-gradient(circle at 20% 20%, #f2d8a3 0%, #e7c075 100%);
     }
 
@@ -30,15 +29,82 @@
 
     header {
       background: linear-gradient(90deg, var(--dorado-oscuro), var(--miel-tostado));
-      color: rgb(255, 255, 255);
+      color: white;
       padding: 25px 10px;
       text-align: center;
       font-size: 1.9em;
       font-weight: 600;
       box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+      position: relative;
     }
 
-    /* 🧭 MENÚ DE NAVEGACIÓN */
+    /* ☰ Botón del menú */
+    .menu-btn {
+      position: absolute;
+      left: 20px;
+      top: 25px;
+      font-size: 1.8em;
+      cursor: pointer;
+      background: none;
+      border: none;
+      color: white;
+      font-weight: bold;
+    }
+
+    /* 📋 Panel lateral */
+    .side-menu {
+      position: fixed;
+      top: 0;
+      left: -260px;
+      width: 250px;
+      height: 100%;
+      background-color: var(--beige-profundo);
+      box-shadow: 3px 0 8px rgba(0, 0, 0, 0.3);
+      transition: 0.3s;
+      padding-top: 80px;
+      z-index: 100;
+    }
+
+    .side-menu.active {
+      left: 0;
+    }
+
+    .side-menu a {
+      display: block;
+      padding: 15px 25px;
+      color: var(--texto-oscuro);
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1.1em;
+      border-bottom: 1px solid rgba(0,0,0,0.1);
+      transition: 0.3s;
+    }
+
+    .side-menu a:hover {
+      background-color: var(--miel-tostado);
+      color: white;
+    }
+
+    /* Fondo oscuro al abrir menú */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.3s;
+      z-index: 50;
+    }
+
+    .overlay.active {
+      opacity: 1;
+      pointer-events: auto;
+    }
+
+    /* 🧭 MENÚ DE NAVEGACIÓN (original) */
     nav {
       position: sticky;
       top: 0;
@@ -53,7 +119,7 @@
     }
 
     nav a {
-      color: var(--texto-oscuro); /* Cambia este color para letras del menú */
+      color: var(--texto-oscuro);
       text-decoration: none;
       font-weight: 600;
       font-size: 1.1em;
@@ -61,10 +127,9 @@
     }
 
     nav a:hover {
-      color: var(--miel-tostado); /* Color al pasar el mouse */
+      color: var(--miel-tostado);
     }
 
-    /* 🎥 Sección principal con video */
     main {
       position: relative;
       text-align: center;
@@ -107,18 +172,16 @@
       box-shadow: 0 3px 8px rgba(0,0,0,0.2);
     }
 
-    /* 🧺 SECCIONES DE CONTENIDO */
     section {
       padding: 60px 20px;
       max-width: 1000px;
       margin: 60px auto;
-      background-color: #d29b38; /* Fondo de secciones: cámbialo si lo quieres más oscuro o beige */
+      background-color: #d29b38;
       border-radius: 15px;
       box-shadow: 0 3px 10px rgba(0,0,0,0.15);
       color: var(--texto-oscuro);
     }
 
-    /* 🧁 PRODUCTOS */
     .productos {
       display: flex;
       flex-wrap: wrap;
@@ -153,7 +216,6 @@
       color: var(--miel-tostado);
     }
 
-    /* 👥 TRABAJA CON NOSOTROS */
     .trabaja {
       text-align: center;
       background-color: var(--beige-profundo);
@@ -171,7 +233,7 @@
 
     .trabaja a {
       text-decoration: none;
-      background-color: #25D366; /* Color botón de WhatsApp */
+      background-color: #25D366;
       color: white;
       padding: 12px 25px;
       border-radius: 10px;
@@ -180,11 +242,8 @@
       transition: 0.3s;
     }
 
-    .trabaja a:hover {
-      opacity: 0.9;
-    }
+    .trabaja a:hover { opacity: 0.9; }
 
-    /* 📱 PIE DE PÁGINA Y REDES SOCIALES */
     footer {
       background: linear-gradient(90deg, var(--miel-tostado), var(--dorado-oscuro));
       color: #fff;
@@ -212,14 +271,11 @@
       transition: 0.3s;
     }
 
-    /* 🎯 Colores de botones de redes */
     .whatsapp { background-color: #25D366; }
     .instagram { background-color: #e4405f; }
     .facebook { background-color: #1877f2; }
-
     .redes a:hover { opacity: 0.85; }
 
-    /* 📱 Ajustes para celulares */
     @media (max-width: 600px) {
       h1 { font-size: 1.8em; }
       p { font-size: 1em; }
@@ -228,10 +284,22 @@
   </style>
 </head>
 <body>
-  <!-- 🥯 ENCABEZADO PRINCIPAL -->
-  <header>🥯 Pan de Arroz "El Camarita"</header>
+  <!-- ☰ Botón menú -->
+  <header>
+    <button class="menu-btn" onclick="toggleMenu()">☰</button>
+    🥯 Pan de Arroz "El Camarita"
+  </header>
 
-  <!-- 🧭 MENÚ -->
+  <!-- 📋 Panel lateral -->
+  <div class="side-menu" id="sideMenu">
+    <a href="#pan-arroz">Pan de arroz y bagué</a>
+    <a href="#saludable">Saludable</a>
+    <a href="#suplementos">Suplementos naturales</a>
+    <a href="#picar">Para picar</a>
+  </div>
+  <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
+
+  <!-- 🧭 MENÚ ORIGINAL -->
   <nav>
     <a href="#inicio">Inicio</a>
     <a href="#quienes-somos">Quiénes Somos</a>
@@ -240,13 +308,12 @@
     <a href="#contacto">Contacto</a>
   </nav>
 
-  <!-- 🎥 SECCIÓN INICIAL CON VIDEO -->
+  <!-- 🎥 SECCIÓN INICIAL -->
   <main id="inicio">
     <video autoplay muted loop playsinline class="video-fondo">
       <source src="fondo.mp4" type="video/mp4" />
       Tu navegador no soporta video HTML5.
     </video>
-
     <h1>Delicioso sabor y crocancia única</h1>
     <p>
       <span class="resaltado">Naturales, Libres de Gluten, Saludables y Nutritivas</span><br><br>
@@ -254,18 +321,33 @@
     </p>
   </main>
 
-  <!-- 👥 QUIÉNES SOMOS -->
-  <section id="quienes-somos">
-    <h1>¿Quiénes Somos?</h1>
-    <p>
-      <strong>Pan de Arroz "El Camarita"</strong> es un emprendimiento ibaguereño que busca ofrecer productos de calidad como las 
-      rosquitas llaneras 100% naturales, libres de gluten y elaboradas a base de arroz y queso.  
-      Cada pieza es hecha con amor, cuidando cada detalle para brindar una crocancia única y un sabor excepcional.  
-      Nuestro propósito es ofrecer <strong>calidad, sabor y salud</strong> en cada bocado.
-    </p>
+  <!-- NUEVAS SECCIONES -->
+  <section id="pan-arroz">
+    <h1>Pan de arroz y bagué</h1>
+    <p>Aquí podrás colocar tus productos e imágenes de esta categoría.</p>
   </section>
 
-  <!-- 🍘 PRODUCTOS -->
+  <section id="saludable">
+    <h1>Saludable</h1>
+    <p>Sección para productos saludables.</p>
+  </section>
+
+  <section id="suplementos">
+    <h1>Suplementos naturales</h1>
+    <p>Aquí podrás mostrar tus suplementos naturales.</p>
+  </section>
+
+  <section id="picar">
+    <h1>Para picar</h1>
+    <p>Productos ligeros y deliciosos para cualquier momento.</p>
+  </section>
+
+  <!-- RESTO DE TU CÓDIGO ORIGINAL -->
+  <section id="quienes-somos">
+    <h1>¿Quiénes Somos?</h1>
+    <p><strong>Pan de Arroz "El Camarita"</strong> es un emprendimiento ibaguereño...</p>
+  </section>
+
   <section id="productos">
     <h1>Nuestros Productos</h1>
     <div class="productos">
@@ -287,25 +369,28 @@
     </div>
   </section>
 
-  <!-- 💼 TRABAJA CON NOSOTROS -->
   <section id="trabaja" class="trabaja">
     <h2>¿Quieres ser parte de nuestro equipo?</h2>
-    <p>En <strong>El Camarita</strong> creemos en el talento local y en el trabajo con pasión.  
-    Si te gustaría unirte a nuestro equipo, contáctanos al <strong>📞 313 309 8211</strong> o haz clic aquí:</p>
+    <p>En <strong>El Camarita</strong> creemos en el talento local...</p>
     <a href="https://wa.me/573133098211" target="_blank">💬 Contactar por WhatsApp</a>
   </section>
 
-  <!-- 📞 PIE DE PÁGINA -->
   <footer id="contacto">
     Ibagué, Tolima — Ya disponible en tiendas locales  
     <br />Tel: 3144834912
-
-
     <div class="redes">
       <a class="whatsapp" href="https://wa.me/message/CM57AFMZETZ2C1" target="_blank">💬 WhatsApp</a>
       <a class="instagram" href="https://www.instagram.com/pandearroz_larecetallanera?igsh=MXN0YWF5N2djcDBveg%3D%3D&utm_source=qr" target="_blank">📸 Instagram</a>
       <a class="facebook" href="https://www.facebook.com/share/19qVVNG6Mz/?mibextid=wwXIfr" target="_blank">👍 Facebook</a>
     </div>
   </footer>
+
+  <!-- ⚙️ SCRIPT -->
+  <script>
+    function toggleMenu() {
+      document.getElementById('sideMenu').classList.toggle('active');
+      document.getElementById('overlay').classList.toggle('active');
+    }
+  </script>
 </body>
 </html>
