--- a/index.html
+++ b/index.html
@@ -139,14 +139,14 @@
     }
 
     .video-fondo {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
-      filter: brightness(0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  z-index: -1;
+  
     }
 
     h1 {
@@ -509,3 +509,4 @@ Nuestro propósito es ofrecer calidad, sabor y salud en cada bocado.</p>
 
 </body>
 </html>
+
