--- a/index.html
+++ b/index.html
@@ -332,23 +332,21 @@
   </style>
 </head>
 <body>
+<body>
+
+  <header>
+    <button class="menu-btn" onclick="toggleMenu()">☰</button>
+    <div class="logo-container">
+      <img src="logo.png" alt="El Camarita logo" class="logo-img">
+      <span class="marca-texto">Pan de Arroz “El Camarita”</span>
+    </div>
+  </header>
 
   <section class="hero">
     <video autoplay muted loop playsinline class="video-fondo">
       <source src="fondo.mp4" type="video/mp4" />
     </video>
   </section>
-
-  <header>
-
-<body>
-
-
-  <!-- ☰ Botón menú -->
-  <header>
-    ...
-  </header>
-  ...
 
   <!-- ☰ Botón menú -->
   <header>
@@ -379,10 +377,7 @@
   </nav>
 
   <!-- 🎥 SECCIÓN INICIAL -->
- <main id="inicio">
-  <!-- Contenido principal (sin el video aquí) -->
- 
-</main>
+ <main id="inicio"></main>
 
   <!-- NUEVAS SECCIONES -->
   <section id="pan-arroz">
