--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
   <header>
     <button class="menu-btn" onclick="toggleMenu()">☰</button>
     <div class="logo-container">
-  <img src="logo.png" alt="El Camarita logo" class="logo-img">
+  <img src="logotipo.png.png" alt="El Camarita logo" class="logo-img">
   <span class="marca-texto">Pan de Arroz “El Camarita”</span>
 </div>
 
