--- a/index.html
+++ b/index.html
@@ -377,17 +377,17 @@ Nuestro propósito es ofrecer calidad, sabor y salud en cada bocado.</p>
     <h1>Nuestros Productos</h1>
     <div class="productos">
       <div class="producto">
-        <img src="producto1.jpg" alt="Rosquitas El Camarita" />
+        <img src="producto1.jpg.jpg" alt="Rosquitas El Camarita" />
         <h3>Rosquitas Llaneras</h3>
         <p>Crocantes, sin gluten y deliciosas. Hechas con arroz y queso natural.</p>
       </div>
       <div class="producto">
-        <img src="producto2.jpg" alt="Paquete El Camarita" />
+        <img src="producto2.jpg.jpg" alt="Paquete El Camarita" />
         <h3>Presentación de 10 unidades</h3>
         <p>Perfectas para compartir o disfrutar a cualquier hora del día.</p>
       </div>
       <div class="producto">
-        <img src="producto3.jpg" alt="Pan de arroz Ibagué" />
+        <img src="producto3.jpg.jpg" alt="Pan de arroz Ibagué" />
         <h3>Producto 100% Natural</h3>
         <p>Libre de gluten, nutritivo y con el auténtico sabor de Ibagué.</p>
       </div>
