Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -459,7 +459,49 @@ Nuestro propósito es ofrecer calidad, sabor y salud en cada bocado.</p>
 
   </div>
 </section>
+<section id="donde-comprar" style="padding: 50px 20px; background: #f8f8f8; text-align: center;">
+    <h2 style="font-size: 2rem; margin-bottom: 20px;">📍 Dónde Comprar</h2>
+    <p style="font-size: 1.2rem; margin-bottom: 30px;">
+        Actualmente disponibles en <strong>Ibagué</strong>. Muy pronto en más ciudades.
+    </p>
 
+    <div style="max-width: 600px; margin: auto; text-align: left; font-size: 1.1rem;">
+        <h3>Tiendas disponibles:</h3>
+        <ul style="line-height: 1.8;">
+            <li>• Tienda VINOTINTO – Calle 77- glorienta del Vergel</li>
+            <li>• Supermercado El Vergel – Antes de la glorienta del Vergel carril bajando</li>
+            <li>• Herbolario diagonal a Makro – cra 5 sur 83-40 La Florida 3 Local 4</li>
+            <li>• Tiendas en Villa Cafe</li>
+            <li>• La Vaca Que Canta
+              <li>• La Vaca Que Canta – Via Salado antes de los venados cra 8 138a 130</li>
+              <li>• Huevos Del Campo – Jordan novena etapa av.guavinal Mz f cs 10</li>
+              <li>• Tienda Naturista Origen – Diagonal a la catedral antes del semaforo</li>
+              <li>• Tiendas en ibague 2000 y los mandarinos</li>
+    </div>
+</section>
+
+<section id="por-que-elegirnos" style="padding: 60px 20px; text-align: center;">
+    <h2 style="font-size: 2rem; margin-bottom: 40px;">⭐ ¿Por Qué Elegirnos?</h2>
+
+    <div style="display: flex; justify-content: center; gap: 30px; flex-wrap: wrap;">
+        
+        <div style="width: 250px; padding: 20px; border-radius: 12px; background: #fafafa; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+            <h3>🌿 100% naturales</h3>
+            <p>Ingredientes auténticos, sin aditivos.</p>
+        </div>
+
+        <div style="width: 250px; padding: 20px; border-radius: 12px; background: #fafafa; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+            <h3>🚫 Libres de gluten</h3>
+            <p>Opciones saludables para todos.</p>
+        </div>
+
+        <div style="width: 250px; padding: 20px; border-radius: 12px; background: #fafafa; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+            <h3>🏡 Sabor tradicional de Ibagué</h3>
+            <p>Recetas caseras que mantienen la tradición.</p>
+        </div>
+
+    </div>
+</section>
 
 
   <section id="trabaja" class="trabaja">
