Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -351,11 +351,11 @@
   <header>
     <button class="menu-btn" onclick="toggleMenu()">☰</button>
     <div class="logo-container">
- <img src="logotipo.png" alt="El Camarita logo" class="logo-img">
-  <span class="marca-texto">Pan de Arroz “El Camarita”</span>
-</div>
+        <img src="logo.png" alt="El Camarita logo" class="logo-img">
+    </div>
+    <span class="marca-texto">Pan de Arroz “El Camarita”</span>
+</header>
 
-  </header>
 <div class="side-menu" id="sideMenu">
   <a href="#inicio">Inicio</a>
   <a href="#quienes-somos">Quiénes Somos</a>
