--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
   <header>
     <button class="menu-btn" onclick="toggleMenu()">☰</button>
     <div class="logo-container">
-        <img src="logo.png" alt="El Camarita logo" class="logo-img">
+        <img src="logotipo.png" alt="El Camarita logo" class="logo-img">
     </div>
     <span class="marca-texto">Pan de Arroz “El Camarita”</span>
 </header>
