--- a/index.html
+++ b/index.html
@@ -344,6 +344,26 @@
   transform: scale(1.1);
 }
 
+/* Ajuste para que el menú quede pegado a la izquierda en celulares */
+@media (max-width: 600px) {
+    header {
+        position: relative;
+    }
+
+    .menu-btn {
+        position: absolute;
+        left: 10px;   /* lo pega a la izquierda */
+        top: 50%;
+        transform: translateY(-50%);
+        z-index: 10;  /* para que quede encima si algo se cruza */
+    }
+
+    .logo-container {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+}
 
   </style>
 </head>
