--- a/index.html
+++ b/index.html
@@ -344,44 +344,19 @@
   transform: scale(1.1);
 }
 
-@media (max-width: 600px) {
-    header {
-        display: flex;
-        align-items: center;
-        padding: 10px;
-    }
-
-    .menu-btn {
-        order: 1;
-        margin-right: 10px;
-    }
-
-    .logo-container {
-        order: 2;
-        display: flex;
-        align-items: center;
-        margin-right: 10px;
-    }
-
-    .marca-texto {
-        order: 3;
-        font-size: 14px;
-    }
-}
-
 
   </style>
 </head>
 <body>
   <!-- ☰ Botón menú -->
  <header>
-    <button class="menu-btn" onclick="toggleMenu()">☰</button>
+    <button class="menu-btn" onclick="toggleMenu()">≡</button>
+
     <div class="logo-container">
         <img src="logotipo.png" alt="El Camarita logo" class="logo-img">
+        <span class="marca-texto">Pan de Arroz "El Camarita"</span>
     </div>
-    <span class="marca-texto">Pan de Arroz “El Camarita”</span>
 </header>
-
 
 
 <div class="side-menu" id="sideMenu">
