--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     :root {
       --dorado-oscuro: #d29b38;
       --miel-tostado: #b8741a;
-      --beige-profundo: #f1d8a6;
+      --beige-profundo: #dfa42e;
       --beige-suave: #f6e3b0;
       --texto-oscuro: #3a2610;
       --fondo-textura: radial-gradient(circle at 20% 20%, #f2d8a3 0%, #e7c075 100%);
